--- a/locales/ru/LC_MESSAGES/index.po
+++ b/locales/ru/LC_MESSAGES/index.po
@@ -1,21 +1,19 @@
-# SOME DESCRIPTIVE TITLE.
+# Russian translation.
 # Copyright (C) 2022. Speech and Multimodal Interfaces Laboratory Team
 # This file is distributed under the same license as the big5 package.
-# FIRST AUTHOR <EMAIL@ADDRESS>, 2022.
+# Elena Ryumina <ryumina_ev@mail.ru>, 2022.
 #
-#, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: big5 1.0\n"
-"Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2022-11-20 17:34+0300\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
+"Project-Id-Version: 1.0\n"
+"POT-Creation-Date: 2022-11-20 18:50+0300\n"
+"PO-Revision-Date: 2022-11-20 18:50+0300\n"
+"Last-Translator: Elena Ryumina <ryumina_ev@mail.ru>, Dmitry Ryumin <dl_03.03.1991@mail.ru>\n"
+"Language-Team: Russian <ryumina_ev@mail.ru>\n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=utf-8\n"
+"Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Generated-By: Babel 2.10.3\n"
+"Generated-By: pygettext.py 1.5\n"
 
 #: ../../source/index.rst:1
 msgid "Персональные качества личности человека"
